# potw-rs

./: Cargo.toml  README.md
migrations/2018-08-07-214935_create_tables/: down.sql  up.sql
src/: main.rs  oauth.rs
src/db/: mod.rs  models.rs  schema.rs
src/middleware/: admin.rs  currentuser.rs  liquid.rs  mod.rs
src/routes/: leaderboard.rs  mod.rs  problems.rs  user.rs
src/routes/admin/: adm.rs  languages.rs  mod.rs  problems.rs
static/css/: style.css
templates/: 404.liquid  basic.liquid  confirm.liquid  index.liquid  leaderboard.liquid  user.liquid
templates/admin/: index.liquid  language.liquid  problem.liquid
templates/problems/: index.liquid  problem.liquid
