[package]
name = "potw"
version = "0.1.0"
authors = ["Scetch <lucierbrandon@gmail.com>"]

[dependencies]
actix-web = "0.7.2"
diesel = { version = "1.4.6", features = ["sqlite"] }
dotenv = "0.13.0"
liquid = "0.15.0"
oauth2 = { git = "https://github.com/ramosbugs/oauth2-rs" }
reqwest = "0.8.6"
serde_derive = "1.0.70"
serde_json = "1.0.24"
serde = "1.0.70"
env_logger = "0.5.11"

failure = "0.1.2"
comrak = "0.2.14"
